force-app/main/default/objects/Shop__c/Shop__c.object-meta.xml
<CustomObject>
    <label>Store</label>
    <nameField>
        <label>门店名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>