force-app/main/default/objects/Shop__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客户</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Shop_Account</relationshipName>
    <type>Lookup</type>
</CustomField>