force-app/main/default/objects/Shop__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>客户名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>