force-app/main/default/objects/Shop__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <description>门店地址</description>
    <label>街道</label>
    <length>255</length>
    <type>Text</type>
</CustomField>