force-app/main/default/objects/Shop__c/fields/Annual_Store_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annual_Store_Sales__c</fullName>
    <label>Annual Store Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>