force-app/main/default/objects/Shop__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <description>根据门店创建顺序生成，格式为00000，用于生成shop code</description>
    <displayFormat>{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>