force-app/main/default/objects/Shop__c/fields/Backup_Floorwalker_JP__c.field-meta.xml
<CustomField>
    <fullName>Backup_Floorwalker_JP__c</fullName>
    <description>创建时间为最近的巡店员姓名信息</description>
    <label>Backup Floorwalker(JP)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>