force-app/main/default/objects/Shop__c/fields/Booth_Expense__c.field-meta.xml
<CustomField>
    <fullName>Booth_Expense__c</fullName>
    <label>Booth Expense(w¥)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>