force-app/main/default/objects/Shop__c/fields/Booth_Size__c.field-meta.xml
<CustomField>
    <fullName>Booth_Size__c</fullName>
    <description>展台尺寸</description>
    <label>Booth Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>