force-app/main/default/objects/Shop__c/fields/Channel_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code_Formula__c</fullName>
    <description>从customer management表获取的客户管理名称编码（公式字段）</description>
    <formula>Account__r.Customer_Management_Name__r.Customer_Management_Name_Code__c</formula>
    <label>Customer Management Code</label>
    <type>Text</type>
</CustomField>