force-app/main/default/objects/Shop__c/fields/Channel_item__c.field-meta.xml
<CustomField>
    <fullName>Channel_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>渠道名称，关联channel item表Id</description>
    <label>Channel</label>
    <referenceTo>Channel_item__c</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>