force-app/main/default/objects/Shop__c/fields/Channel_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name_Formula__c</fullName>
    <description>从customer management表获取的客户管理名称</description>
    <formula>Account__r.Customer_Management_Name__r.Name</formula>
    <label>Customer Management Name</label>
    <type>Text</type>
</CustomField>