force-app/main/default/objects/Shop__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>城市</description>
    <label>城市</label>
    <length>255</length>
    <type>Text</type>
</CustomField>