force-app/main/default/objects/Shop__c/fields/CoverImg2__c.field-meta.xml
<CustomField>
    <fullName>CoverImg2__c</fullName>
    <formula>HYPERLINK(
&quot;/lightning/cmp/c__lwcWrapper?c__lwcName=uploadStorePicturesLWC&amp;c__versionId=&quot; &amp; CoverImgVersionId2__c &amp; &quot;&amp;c__fileType=&quot;&amp; CoverImgFileType2__c &amp; &quot;&amp;c__contentBodyId=&quot;&amp; CoverImgContentBodyId2__c &amp; &quot;&amp;c__recordId=&quot;&amp; Id &amp; &quot;&amp;c__versionIdField=CoverImgVersionId2__c&amp;c__contentBodyIdField=CoverImgContentBodyId2__c&amp;c__fileTypeField=CoverImgFileType2__c&amp;c__isImgManagement=true&quot;,
IF (
ISBLANK( CoverImgVersionId2__c ),
IMAGE(&quot;/logos/Custom/Plus_Primary/logo.png&quot;, &quot;Review&quot;, 20, 20),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=thumb240by180&amp;versionId=&quot; &amp; CoverImgVersionId2__c &amp; &quot;&amp;operationContext=CHATTER&amp;contentId=&quot; &amp; CoverImgContentBodyId2__c, &quot;Preview is generating, please refresh later&quot;, 180, 240)
),
&quot;_parent&quot;
)</formula>
    <label>Store Sampling Product Layout(Standard)3</label>
    <type>Text</type>
</CustomField>