force-app/main/default/objects/Shop__c/fields/CoverImgContentBodyId2__c.field-meta.xml
<CustomField>
    <fullName>CoverImgContentBodyId2__c</fullName>
    <label>CoverImgContentBodyId2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>