force-app/main/default/objects/Shop__c/fields/CoverImgFileType2__c.field-meta.xml
<CustomField>
    <fullName>CoverImgFileType2__c</fullName>
    <label>CoverImgFileType2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>