force-app/main/default/objects/Shop__c/fields/CoverImgFileType__c.field-meta.xml
<CustomField>
    <fullName>CoverImgFileType__c</fullName>
    <label>CoverImgFileType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>