force-app/main/default/objects/Shop__c/fields/CoverImgVersionId1__c.field-meta.xml
<CustomField>
    <fullName>CoverImgVersionId1__c</fullName>
    <label>CoverImgVersionId1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>