force-app/main/default/objects/Shop__c/fields/CoverImgVersionId2__c.field-meta.xml
<CustomField>
    <fullName>CoverImgVersionId2__c</fullName>
    <label>CoverImgVersionId2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>