force-app/main/default/objects/Shop__c/fields/Customer_Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Store_Type__c</fullName>
    <label>Customer Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Store_Type</valueSetName>
    </valueSet>
</CustomField>