force-app/main/default/objects/Shop__c/fields/DMA__c.field-meta.xml
<CustomField>
    <fullName>DMA__c</fullName>
    <description>Special field for USA</description>
    <inlineHelpText>Special field for USA</inlineHelpText>
    <label>DMA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>