force-app/main/default/objects/Shop__c/fields/EN_Name__c.field-meta.xml
<CustomField>
    <fullName>EN_Name__c</fullName>
    <label>门店英文名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>