force-app/main/default/objects/Shop__c/fields/Entering_Status__c.field-meta.xml
<CustomField>
    <fullName>Entering_Status__c</fullName>
    <description>门店状态，同步新系统，Close，Open，Draft</description>
    <inlineHelpText>Entering status, including 3 types: Open/ Draft / Close</inlineHelpText>
    <label>门店状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>