force-app/main/default/objects/Shop__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>从account表中获取客户的销售组织</description>
    <formula>text(Account__r.Hisense_Entity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>销售组织</label>
    <type>Text</type>
</CustomField>