force-app/main/default/objects/Shop__c/fields/Exhibition_Format__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Format__c</fullName>
    <label>Booth type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>合厅</fullName>
            </value>
            <value>
                <fullName>专厅</fullName>
            </value>
            <value>
                <fullName>岛台</fullName>
            </value>
            <value>
                <fullName>上墙</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>