force-app/main/default/objects/Shop__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>传真</label>
    <length>255</length>
    <type>Text</type>
</CustomField>