force-app/main/default/objects/Shop__c/fields/Grid__c.field-meta.xml
<CustomField>
    <fullName>Grid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>网格名称，指门店所属网格划分</description>
    <label>网格</label>
    <referenceTo>Gridding__c</referenceTo>
    <relationshipLabel>Stores (网格)</relationshipLabel>
    <relationshipName>ShopRLg9</relationshipName>
    <type>Lookup</type>
</CustomField>