force-app/main/default/objects/Shop__c/fields/Grid_All__c.field-meta.xml
<CustomField>
    <fullName>Grid_All__c</fullName>
    <formula>IF(
   OR( ISBLANK(Account__r.SAP_Customer_Code__c) , ISBLANK(Grid__c), ISBLANK(Store_No_from_Account__c) ) , 
   &apos;&apos;,
   Account__r.SAP_Customer_Code__c + &apos;_&apos; + 
if(!ISBLANK(Grid__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c),Grid__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) + 
if(!ISBLANK(Grid__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c),Grid__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) + 
if(!ISBLANK(Grid__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c),Grid__r.Parent_Gridding__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) + 
if(!ISBLANK(Grid__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c),Grid__r.Parent_Gridding__r.Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) + 
if(!ISBLANK(Grid__r.Parent_Gridding__r.Gridding_Code__c),Grid__r.Parent_Gridding__r.Gridding_Code__c + &apos;-&apos;,&apos;&apos; ) + 
if(!ISBLANK(Grid__r.Gridding_Code__c),Grid__r.Gridding_Code__c,&apos;&apos; ) + &apos;_&apos; + 
Store_No_from_Account__c )</formula>
    <label>网格所有层级</label>
    <type>Text</type>
</CustomField>