force-app/main/default/objects/Shop__c/fields/HA_Num__c.field-meta.xml
<CustomField>
    <fullName>HA_Num__c</fullName>
    <label>HA Num</label>
    <summarizedField>Product_Line_Pelple_Num__c.HA__c</summarizedField>
    <summaryForeignKey>Product_Line_Pelple_Num__c.Store__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>