force-app/main/default/objects/Shop__c/fields/Have_Floorwalker__c.field-meta.xml
<CustomField>
    <fullName>Have_Floorwalker__c</fullName>
    <description>Responsible person 中有巡店员</description>
    <label>*Have Floorwalker</label>
    <summaryFilterItems>
        <field>Responsible_Person__c.RecordType__c</field>
        <operation>contains</operation>
        <value>Floorwalker,Backup Floorwalker</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Responsible_Person__c.UserEmail__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Responsible_Person__c.Shop_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>