force-app/main/default/objects/Shop__c/fields/Health_Degree__c.field-meta.xml
<CustomField>
    <fullName>Health_Degree__c</fullName>
    <inlineHelpText>The &quot;--&quot; indicates that the store has not yet participated in the health rating. Score source: check items in the inspection report and the resolution rate within the validity period of the ticket.</inlineHelpText>
    <label>Health Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>