force-app/main/default/objects/Shop__c/fields/Health_Standard__c.field-meta.xml
<CustomField>
    <fullName>Health_Standard__c</fullName>
    <formula>Rating_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Standard</label>
    <type>Text</type>
</CustomField>