force-app/main/default/objects/Shop__c/fields/Is_Export__c.field-meta.xml
<CustomField>
    <fullName>Is_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Export</label>
    <type>Checkbox</type>
</CustomField>