force-app/main/default/objects/Shop__c/fields/IsInMyRegion__c.field-meta.xml
<CustomField>
    <fullName>IsInMyRegion__c</fullName>
    <formula>TEXT(Sales_Region__c) == TEXT($User.Sales_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is In My Region</label>
    <type>Checkbox</type>
</CustomField>