force-app/main/default/objects/Shop__c/fields/isLocationEmpty__c.field-meta.xml
<CustomField>
    <fullName>isLocationEmpty__c</fullName>
    <formula>ISBLANK(Shop_Center_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLocationEmpty</label>
    <type>Checkbox</type>
</CustomField>