force-app/main/default/objects/Shop__c/fields/MarketId__c.field-meta.xml
<CustomField>
    <fullName>MarketId__c</fullName>
    <label>MarketId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>