force-app/main/default/objects/Shop__c/fields/Merchant_Shop_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Shop_Name__c</fullName>
    <description>商家门店名称</description>
    <label>Merchant Shop Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>