force-app/main/default/objects/Shop__c/fields/Metro_Type__c.field-meta.xml
<CustomField>
    <fullName>Metro_Type__c</fullName>
    <label>Metro Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INNER METRO</fullName>
            </value>
            <value>
                <fullName>OUTTER METRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>