force-app/main/default/objects/Shop__c/fields/Name_Saels_Region__c.field-meta.xml
<CustomField>
    <fullName>Name_Saels_Region__c</fullName>
    <formula>Name + Text(Sales_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name &amp; Sales Region</label>
    <type>Text</type>
</CustomField>