force-app/main/default/objects/Shop__c/fields/Number_Of_Store_Staff__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Store_Staff__c</fullName>
    <description>门店促销员人数</description>
    <label>Number Of Store Staff</label>
    <summaryFilterItems>
        <field>Responsible_Person__c.RecordType__c</field>
        <operation>equals</operation>
        <value>Promoter</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Responsible_Person__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Responsible_Person__c.Shop_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>