force-app/main/default/objects/Shop__c/fields/Planograms__c.field-meta.xml
<CustomField>
    <fullName>Planograms__c</fullName>
    <formula>HYPERLINK(
&quot;/lightning/cmp/c__lwcWrapper?c__lwcName=uploadStorePicturesLWC&amp;c__versionId=&quot; &amp; PlanogramsVersionId__c &amp; &quot;&amp;c__fileType=&quot;&amp; PlanogramsFileType__c &amp; &quot;&amp;c__contentBodyId=&quot;&amp; PlanogramsContentBodyId__c &amp; &quot;&amp;c__recordId=&quot;&amp; Id &amp; &quot;&amp;c__versionIdField=PlanogramsVersionId__c&amp;c__contentBodyIdField=PlanogramsContentBodyId__c&amp;c__fileTypeField=PlanogramsFileType__c&amp;c__isImgManagement=true&quot;,
IF (
ISBLANK( PlanogramsVersionId__c ),
IMAGE(&quot;/logos/Custom/Plus_Primary/logo.png&quot;, &quot;Review&quot;, 20, 20),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=thumb240by180&amp;versionId=&quot; &amp; PlanogramsVersionId__c &amp; &quot;&amp;operationContext=CHATTER&amp;contentId=&quot; &amp; PlanogramsContentBodyId__c, &quot;Preview is generating, please refresh later&quot;, 180, 240)
),
&quot;_parent&quot;
)</formula>
    <label>Planograms Of Hisense Product</label>
    <type>Text</type>
</CustomField>