force-app/main/default/objects/Shop__c/fields/PlanogramsContentBodyId__c.field-meta.xml
<CustomField>
    <fullName>PlanogramsContentBodyId__c</fullName>
    <label>PlanogramsContentBodyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>