force-app/main/default/objects/Shop__c/fields/PlanogramsFileType__c.field-meta.xml
<CustomField>
    <fullName>PlanogramsFileType__c</fullName>
    <label>PlanogramsFileType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>