force-app/main/default/objects/Shop__c/fields/PlanogramsVersionId__c.field-meta.xml
<CustomField>
    <fullName>PlanogramsVersionId__c</fullName>
    <label>PlanogramsVersionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>