force-app/main/default/objects/Shop__c/fields/Postal__c.field-meta.xml
<CustomField>
    <fullName>Postal__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>