force-app/main/default/objects/Shop__c/fields/Province_State__c.field-meta.xml
<CustomField>
    <fullName>Province_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province/State</label>
    <referenceTo>Country_State__c</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>