force-app/main/default/objects/Shop__c/fields/Rating_Description__c.field-meta.xml
<CustomField>
    <fullName>Rating_Description__c</fullName>
    <label>Rating Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>