force-app/main/default/objects/Shop__c/fields/Region_Type__c.field-meta.xml
<CustomField>
    <fullName>Region_Type__c</fullName>
    <label>Region Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>METRO</fullName>
            </value>
            <value>
                <fullName>REGINAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>