force-app/main/default/objects/Shop__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>巡店员</label>
    <referenceTo>User</referenceTo>
    <relationshipName>shops</relationshipName>
    <type>Lookup</type>
</CustomField>