force-app/main/default/objects/Shop__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense USA&apos;) , &apos;Hisense USA&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;USA(OEM)&apos;) , &apos;USA(OEM)&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Mexico&apos;) , &apos;Hisense Mexico&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Australia&apos;) , &apos;Hisense Australia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Malaysia&apos;) , &apos;Hisense Malaysia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense South Africa&apos;) , &apos;Hisense South Africa&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Canada&apos;) , &apos;Hisense Canada&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Thailand&apos;) , &apos;Hisense Thailand&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense India&apos;) , &apos;Hisense India&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Indonesia&apos;) , &apos;Hisense Indonesia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Chile&apos;) , &apos;Hisense Chile&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Dubai&apos;) , &apos;Hisense Dubai&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;American Sales Department&apos;) , &apos;American Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Middle East and Africa Sales Department&apos;) , &apos;Middle East and Africa Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Asia-Pacific Sales Department&apos;) , &apos;Asia-Pacific Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Key Account Sales Department&apos;) , &apos;Key Account Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Europe Sales Department&apos;) , &apos;Europe Sales Department&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Colombia&apos;) , &apos;Hisense Colombia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Argentina&apos;) , &apos;Hisense Argentina&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense West Africa&apos;) , &apos;Hisense West Africa&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Philippines&apos;) , &apos;Hisense Philippines&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Communications Sales Department&apos;) , &apos;Communications Sales Department&apos;, &apos;&apos;) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) )</defaultValue>
    <description>销售区域</description>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Region</valueSetName>
    </valueSet>
</CustomField>