force-app/main/default/objects/Shop__c/fields/Sales_Region_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Region</label>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>