force-app/main/default/objects/Shop__c/fields/Shop_Center_Location__c.field-meta.xml
<CustomField>
    <fullName>Shop_Center_Location__c</fullName>
    <label>门店经纬度</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>