force-app/main/default/objects/Shop__c/fields/Shop_Code__c.field-meta.xml
<CustomField>
    <fullName>Shop_Code__c</fullName>
    <description>根据account表的SAP编码+数字生成</description>
    <formula>IF( !ISBLANK(Account__r.SAP_Customer_Code__c) , TEXT(VALUE(Account__r.SAP_Customer_Code__c)) + Auto_Number__c , TEXT(VALUE(Auto_Number__c)))</formula>
    <label>Shop Code</label>
    <type>Text</type>
</CustomField>