force-app/main/default/objects/Shop__c/fields/Shop_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Shop_Code_Text__c</fullName>
    <description>业务提供的门店编码，如业务未提供，则引用shop code（适用于东盟）</description>
    <externalId>true</externalId>
    <label>门店编码(指定)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>