force-app/main/default/objects/Shop__c/fields/Shop_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Shop_External_Key__c</fullName>
    <description>三期不适用</description>
    <externalId>true</externalId>
    <label>门店编码</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>