force-app/main/default/objects/Shop__c/fields/Shop_Level__c.field-meta.xml
<CustomField>
    <fullName>Shop_Level__c</fullName>
    <description>门店等级，分为S/A/B/C</description>
    <label>门店等级</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ShopLevel</valueSetName>
    </valueSet>
</CustomField>