force-app/main/default/objects/Shop__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>门店简称</description>
    <label>Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>