force-app/main/default/objects/Shop__c/fields/Stand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stand_Amount__c</fullName>
    <label>Stand Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>