force-app/main/default/objects/Shop__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <description>存储位置</description>
    <label>Storage Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>