force-app/main/default/objects/Shop__c/fields/Store_Area__c.field-meta.xml
<CustomField>
    <fullName>Store_Area__c</fullName>
    <label>Store Area(㎡)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>