force-app/main/default/objects/Shop__c/fields/Store_Development_Time__c.field-meta.xml
<CustomField>
    <fullName>Store_Development_Time__c</fullName>
    <label>Store Development Time</label>
    <type>Date</type>
</CustomField>