force-app/main/default/objects/Shop__c/fields/Store_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Store_Health_Status__c</fullName>
    <formula>Health_Degree__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The &quot;--&quot; indicates that the store has not yet participated in the health rating. Score source: check items in the inspection report and the resolution rate within the validity period of the ticket.</inlineHelpText>
    <label>Store Health Status</label>
    <type>Text</type>
</CustomField>