force-app/main/default/objects/Shop__c/fields/Store_Level_HQ__c.field-meta.xml
<CustomField>
    <fullName>Store_Level_HQ__c</fullName>
    <description>门店等级（总部）,基于门店等级字段选择值，自动从海外公司及总部的门店等级映射表中带出对应总部门店等级，不允许修改</description>
    <label>Store Level（HQ）</label>
    <length>3</length>
    <type>Text</type>
</CustomField>