force-app/main/default/objects/Shop__c/fields/Store_No_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_No_from_Account__c</fullName>
    <description>渠道给门店的编号</description>
    <inlineHelpText>Store ID created by customer</inlineHelpText>
    <label>门店渠道编号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>