force-app/main/default/objects/Shop__c/fields/Store_Properties__c.field-meta.xml
<CustomField>
    <fullName>Store_Properties__c</fullName>
    <label>Store Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Direct Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>