force-app/main/default/objects/Shop__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <length>5</length>
    <type>Text</type>
</CustomField>