force-app/main/default/objects/Shop__c/fields/Toshiba_Tv_Num__c.field-meta.xml
<CustomField>
    <fullName>Toshiba_Tv_Num__c</fullName>
    <label>Toshiba Tv Num</label>
    <summarizedField>Product_Line_Pelple_Num__c.Toshiba_Tv__c</summarizedField>
    <summaryForeignKey>Product_Line_Pelple_Num__c.Store__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>