force-app/main/default/objects/Shop__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Hiper,Retail,Service,Carrier类型为阿根廷专用</description>
    <label>Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hiper</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>ChainStort</fullName>
            </value>
            <value>
                <fullName>TraditionalStore</fullName>
            </value>
            <value>
                <fullName>ChainStore</fullName>
            </value>
            <value>
                <fullName>ShopInShop</fullName>
            </value>
            <value>
                <fullName>FlagshipStore</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>