force-app/main/default/objects/Shop__c/listViews/Argentina.listView-meta.xml
<ListView>
    <fullName>Argentina</fullName>
    <columns>NAME</columns>
    <columns>Channel_item__c</columns>
    <columns>Grid__c</columns>
    <columns>Address1__c</columns>
    <columns>Shop_Center_Location__Latitude__s</columns>
    <columns>Shop_Center_Location__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Argentina</value>
    </filters>
    <label>Argentina</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Argentina_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>