force-app/main/default/objects/Shop__c/listViews/Australia.listView-meta.xml
<ListView>
    <fullName>Australia</fullName>
    <columns>NAME</columns>
    <columns>Channel_item__c</columns>
    <columns>Account__c</columns>
    <columns>Grid__c</columns>
    <columns>State_Province__c</columns>
    <columns>City__c</columns>
    <columns>Address1__c</columns>
    <columns>Shop_Center_Location__Latitude__s</columns>
    <columns>Shop_Center_Location__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Australia</value>
    </filters>
    <label>Australia</label>
    <sharedTo>
        <roleAndSubordinatesInternal>AU_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>