force-app/main/default/objects/Shop__c/listViews/Canada_Store.listView-meta.xml
<ListView>
    <fullName>Canada_Store</fullName>
    <columns>NAME</columns>
    <columns>Grid__c</columns>
    <columns>City__c</columns>
    <columns>Address1__c</columns>
    <columns>Channel_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Responsible_Person__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Canada</value>
    </filters>
    <label>Canada</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Canada_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>