force-app/main/default/objects/Shop__c/listViews/Chile_Store.listView-meta.xml
<ListView>
    <fullName>Chile_Store</fullName>
    <columns>NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>Account_Name__c</columns>
    <columns>District__c</columns>
    <columns>Grid__c</columns>
    <columns>Address1__c</columns>
    <columns>Shop_Center_Location__Latitude__s</columns>
    <columns>Shop_Center_Location__Longitude__s</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Chile</value>
    </filters>
    <label>Chile</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Chile_DIR</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Chile_KAM</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Chile_Marketing_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Chile_Product_Team</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>